# BBClash

./: .gitignore  Cargo.toml  LICENSE.md  README.md  Spec.md
.github/workflows/: rust.yml
benches/: benchmarks.rs
benches/texts/: mod.rs
src/: bbcode_lexer.rs  bbcode_tokenizer.rs  html_constructor.rs  lib.rs
tests/: basic_tests.rs  tag_tests.rs
